Corrected overflowing inner div.

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -1884,6 +1884,7 @@ table table td,
 	flex-direction: column;
 	height: 100%;
 	text-align: left;
+	flex: 1;
 }
 
 .network-status-table .ifacebox-body > * {
